Finished the final tests on the vm. Removed the old client_js and added a description to one of the constants in protocol.h. The server now comes default with 4 threads